--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,4 @@ services:
     name: aspect-ai
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn main:app
-    plan: free
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
